<resources>
    <string name="app_name">LinkMindPro</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="login">Log in</string>
    <string name="already_a_customer">Already a Customer? </string>
    <string name="sign_up">Sign up</string>
    <string name="register_with_us"><u>Register</u></string>
    <string name="catalog">Catalog</string>
    <string name="setting">Setting</string>
    <string name="device_not_authenticated">You device is not authenticated</string>
    <string name="invalid_email">Please enter valid email Id</string>
    <string name="enter_emailId">Please enter email Id</string>
    <string name="please_enter">Please enter </string>
    <string name="no_internet_message">Not connected to internet. Please check your network settings.</string>
    <string name="login_successfully">Login successfully</string>
    <string name="new_message">New Message</string>
    <string name="cancel">Cancel</string>
    <string name="change_image">Change Image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="logout">Logout</string>
    <string name="get_started">Get Started</string>
    <string name="taking_therapy">Taking therapy \ncommunication to the \nnext level</string>
    <string name="broaden_your_reach">Broaden your reach and availability \nwith your parents</string>
    <string name="patient_can_apply">Patient can apply priority alerts to mark \n a message as urgent.</string>
    <string name="emergency_paging">Emergency Paging</string>
    <string name="you_have_a_clinical">You have a clinical emergency message</string>
    <string name="message_is_in_urgent">Message is in urgent need of your attention.</string>
    <string name="urgent">Urgent</string>
    <string name="i_am_having">I\'m having a panic attack. Can we mee…</string>
    <string name="do_not_disturb">Do Not Disturb</string>
    <string name="do_not_disturb_function">Do-Not-Disturb function disables \nnotifications and lets patients know that \n therapists are not available.</string>
    <string name="delivery_confirmation">Delivery Confirmation</string>
    <string name="know_instantly">Know instantly when messages have \nbeen sent, delivered, and read.</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="hello">Hello</string>
    <string name="please_enter_your_mail">Please enter your mail</string>
    <string name="continue_">Continue</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="password_did_not_match">Confirm password did not match</string>
    <string name="eight_char">Password must contain at-least 8 characters</string>
    <string name="please_wait">Please wait…</string>
    <string name="enter_your_mail">Enter your mail</string>
    <string name="submit">Submit</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="invite_patients">INVITE PATIENTS</string>
    <string name="patients_email">Patient\'s Email</string>
    <string name="patient_info">Enter your patient\'s email address to \ninvite them to your network</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="na">N/A</string>
    <string name="do_not_disturb_">Do Not Disturb:</string>
    <string name="are_you_sure_logout">Are you sure you want to logout?</string>
    <string name="please_enter_dnd_message">Please enter dnd message.</string>
    <string name="try_to_compose">Type to compose</string>
    <string name="need_your_attention">Message is in urgent need of your attention.</string>
    <string name="emergency_message">You have a clinical emergency message</string>
    <string name="currently_unavailable">I am currently unavailable now.</string>
    <string name="do_not_disturb_dnd">Do Not Disturb (DND)</string>
</resources>
