<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <EditText
        android:id="@+id/edit_text_current_password"
        style="@style/textSize_medium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_above="@+id/edit_text_new_password"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:background="@drawable/bg_button_blue_border"
        android:gravity="start"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edit_text_new_password"
        style="@style/textSize_medium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_button_blue_border"
        android:gravity="start"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edit_text_confirm_new_password"
        style="@style/textSize_medium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/edit_text_new_password"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/bg_button_blue_border"
        android:gravity="start"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button_continue"
        style="@style/textSize_medium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/edit_text_confirm_new_password"
        android:layout_marginBottom="@dimen/_44sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/continue_"
        android:textColor="@color/white" />
</RelativeLayout>
