<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp">

        <TextView
            android:id="@+id/text_view_enter_your_mail"
            style="@style/textSize_smaller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/edit_text_email"
            android:layout_marginBottom="@dimen/_40sdp"
            android:gravity="center"
            android:text="@string/enter_your_mail"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edit_text_email"
            style="@style/textSize_small"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_button_blue_border"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/eqdepot_font_gray" />

        <Button
            android:id="@+id/button_submit"
            style="@style/textSize_medium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/edit_text_email"
            android:layout_marginBottom="@dimen/_44sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/submit"
            android:textColor="@color/white" />
    </RelativeLayout>
</LinearLayout>