<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_420sdp">

            <TextView
                android:id="@+id/text_view_sign_up"
                style="@style/textSize_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/sign_up"
                android:textColor="@color/black" />

            <LinearLayout
                android:id="@+id/linear_layout_link_mind"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/text_sign_up"
                android:layout_marginTop="@dimen/_44sdp"
                android:orientation="horizontal"
                tools:ignore="UnknownId">

                <ImageView
                    android:layout_width="@dimen/_44sdp"
                    android:layout_height="@dimen/_44sdp"
                    android:layout_marginLeft="@dimen/_55ssp"
                    android:layout_marginStart="@dimen/_55ssp"
                    android:contentDescription="@null"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="link"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/_35sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="mind"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_35sdp"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_text_email"
                style="@style/textSize_small"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/linear_layout_link_mind"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/bg_button_blue_border"
                android:gravity="start"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/edit_text_password"
                style="@style/textSize_medium"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/edit_text_email"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_button_blue_border"
                android:gravity="start"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/text_view_forgot_password"
                style="@style/textSize_smaller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/edit_text_password"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/forgot_your_password"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button_login"
                style="@style/textSize_medium"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/_44sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/login"
                android:textColor="@color/white" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
